// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FAQScreen CheckBalanceScreen Rendering should match to snapshot 1`] = `
<ContextProvider
  value={null}
>
  <CheckBalanceScreen
    NFCTransceiveStatus={true}
    cancelNFCRead={[Function]}
    chargeNFCCard={[Function]}
    getUserFromPublicSerialNumber={[Function]}
    resetCheckBalance={[Function]}
    store={
      Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      }
    }
  />
</ContextProvider>
`;

exports[`FAQScreen Rendering should match to snapshot 1`] = `
<FAQScreen
  dispatch={[Function]}
  networkStatus={true}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
/>
`;

exports[`FAQScreen TermsScreen Rendering should match to snapshot 1`] = `
<TermsScreen
  dispatch={[Function]}
  networkStatus={true}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
/>
`;
